--- a/.github/workflows/test_gke.yaml
+++ b/.github/workflows/test_gke.yaml
@@ -3,6 +3,11 @@ name: Connect to GKE
 on:
   workflow_dispatch:
 
+env:
+  GCP_PROJECT_ID: fabled-era-467617-p0
+  GKE_CLUSTER_NAME: lm-cluster
+  GKE_ZONE: us-central1-a
+  
 jobs:
   connect-to-gke:
     runs-on: ubuntu-latest
@@ -21,7 +26,7 @@ jobs:
     - name: Get GKE credentials
       run: |
         gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
-          --region ${{ secrets.GKE_REGION }} \
+          --region ${{ secrets.GKE_ZONE }} \
           --project ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Verify kubectl connection
