--- a/.github/workflows/test_gke.yaml
+++ b/.github/workflows/test_gke.yaml
@@ -26,9 +26,9 @@ jobs:
 
     - name: Get GKE credentials
       run: |
-        gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
-          --zone ${{ secrets.GKE_ZONE }} \
-          --project ${{ secrets.GCP_PROJECT_ID }}
+        gcloud container clusters get-credentials $GKE_CLUSTER_NAME  \
+          --zone $GKE_ZONE \
+          --project $GCP_PROJECT_ID
 
     - name: Verify kubectl connection
       run: |
