--- a/.github/workflows/test_gke.yaml
+++ b/.github/workflows/test_gke.yaml
@@ -21,3 +21,14 @@ jobs:
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
 
+    
+    - name: Get GKE credentials
+      run: |
+        gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
+          --zone ${{ secrets.GKE_ZONE }} \
+          --project ${{ secrets.GCP_PROJECT_ID }}
+
+    - name: Verify kubectl connection
+      run: |
+        kubectl get nodes
+
