--- a/.github/workflows/test_gke.yaml
+++ b/.github/workflows/test_gke.yaml
@@ -28,6 +28,11 @@ jobs:
           --zone ${{ secrets.GKE_ZONE }} \
           --project ${{ secrets.GCP_PROJECT_ID }}
 
+    - name: Install gke-gcloud-auth-plugin
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+        
     - name: Verify kubectl connection
       run: |
         kubectl get nodes
