--- a/.github/workflows/test_gke.yaml
+++ b/.github/workflows/test_gke.yaml
@@ -2,12 +2,15 @@ name: Connect to GKE
 
 on:
   workflow_dispatch:
-
+  push:
+    branches: [main, release_lm]
+ 
 jobs:
   connect-to-gke:
     runs-on: ubuntu-latest
 
     steps:
+    
     - name: Checkout repository
       uses: actions/checkout@v3
 
@@ -15,11 +18,12 @@ jobs:
       uses: google-github-actions/auth@v2
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
+        project_id: ${{secrets.GCP_PROJECT_ID}}
 
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v1
-      with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+#    - name: Set up Google Cloud SDK
+#      uses: google-github-actions/setup-gcloud@v1
+#      with:
+#        project_id: ${{ secrets.GCP_PROJECT_ID }}
 
     
     - name: Get GKE credentials
