--- a/.github/workflows/test_gke.yaml
+++ b/.github/workflows/test_gke.yaml
@@ -15,12 +15,16 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Authenticate to Google Cloud
+
       uses: google-github-actions/auth@v2
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
         project_id: ${{secrets.GCP_PROJECT_ID}}
 
-#    - name: Set up Google Cloud SDK
+
+    - name: Set up Google Cloud SDK
+      run: |
+        sudo apt-get install google-cloud-cli-gke-gcloud-auth-plugin
 #      uses: google-github-actions/setup-gcloud@v1
 #      with:
 #        project_id: ${{ secrets.GCP_PROJECT_ID }}
@@ -35,6 +39,7 @@ jobs:
     - name: Install gke-gcloud-auth-plugin
       run: |
         sudo apt-get update
+        
         gcloud components install gke-gcloud-auth-plugin
         
     - name: Verify kubectl connection
