--- a/.github/workflows/test_gke.yaml
+++ b/.github/workflows/test_gke.yaml
@@ -23,13 +23,9 @@ jobs:
 
 
     - name: Set up Google Cloud SDK
-      run: |
-        sudo apt-get update
-        sleep 5
-        sudo apt-get install google-cloud-cli-gke-gcloud-auth-plugin
-#      uses: google-github-actions/setup-gcloud@v1
-#      with:
-#        project_id: ${{ secrets.GCP_PROJECT_ID }}
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
 
     
     - name: Get GKE credentials
