--- a/.github/workflows/test_gke.yaml
+++ b/.github/workflows/test_gke.yaml
@@ -21,26 +21,30 @@ jobs:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
         project_id: ${{secrets.GCP_PROJECT_ID}}
 
-
+ 
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-    
-    - name: Get GKE credentials
-      run: |
-        gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
-          --zone ${{ secrets.GKE_ZONE }} \
-          --project ${{ secrets.GCP_PROJECT_ID }}
+  
+  setup_gke:
+    runs-on: ubuntu_latest
+    needs: connect-to-gke
+    steps:
+    -  name: Get GKE credentials
+       run: |
+            gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
+              --zone ${{ secrets.GKE_ZONE }} \
+              --project ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Install gke-gcloud-auth-plugin
       run: |
-        sudo apt-get update
+            sudo apt-get update
         
-        gcloud components install gke-gcloud-auth-plugin
+            gcloud components install gke-gcloud-auth-plugin
         
     - name: Verify kubectl connection
       run: |
-        kubectl get nodes
+          kubectl get nodes
 
